[gd_scene load_steps=2 format=3 uid="uid://crsko7bvgi5ai"]

[ext_resource type="Script" path="res://prog 88a.gd" id="1_vvoiu"]

[node name="prog 88a" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -4.0
offset_top = -1.0
offset_right = -4.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vvoiu")

[node name="num1" type="Label" parent="."]
layout_mode = 0
offset_left = 13.0
offset_top = 8.0
offset_right = 256.0
offset_bottom = 89.0
text = "enter num1:"

[node name="num2" type="Label" parent="."]
layout_mode = 0
offset_left = 6.0
offset_top = 83.0
offset_right = 249.0
offset_bottom = 164.0
text = "enter num2:"

[node name="Label3" type="Label" parent="."]
layout_mode = 0
offset_left = 34.0
offset_top = 188.0
offset_right = 554.0
offset_bottom = 637.0

[node name="num3" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 328.0
offset_top = 11.0
offset_right = 608.0
offset_bottom = 90.0

[node name="num4" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 329.0
offset_top = 100.0
offset_right = 609.0
offset_bottom = 179.0

[node name="calc" type="Button" parent="."]
layout_mode = 0
offset_left = 672.0
offset_top = 48.0
offset_right = 962.0
offset_bottom = 151.0
text = "calculate"

[node name="clear" type="Button" parent="."]
layout_mode = 0
offset_left = 686.0
offset_top = 223.0
offset_right = 976.0
offset_bottom = 326.0
text = "clear"

[node name="exi" type="Button" parent="."]
layout_mode = 0
offset_left = 683.0
offset_top = 502.0
offset_right = 973.0
offset_bottom = 605.0
text = "exit"

[connection signal="pressed" from="calc" to="." method="_on_calc_pressed"]
[connection signal="pressed" from="clear" to="." method="_on_clear_pressed"]
[connection signal="pressed" from="exi" to="." method="_on_exi_pressed"]
