extends Control


# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta):
	pass


func _on_calc_pressed():
	var num4 = int($num4.text)
	var num3 = int($num3.text)
	var Sum = num3 + num4
	var dif
	
	var min = 0
	if num3 > num4
		max = num3
		
		else:
			max = num3
		$lblout.text = "sum =" + str(sum) \
				"\nDifference = " + str(Diff) + \
				
				"\nabs. Distance = " + str(abd)
				"\nmax 
				"\nmin = " + str(min)

#
	
